--- a/templates/landing_admin.html
+++ b/templates/landing_admin.html
@@ -59,6 +59,7 @@
         <h1 class="text-3xl font-bold mb-8">Welcome to Transport Management System</h1>
         <ul class="text-lg">
             <li class="mb-4"><a href="{{ url_for('booking2') }}" class="text-blue-500 hover:underline">Book a Bus</a></li>
+            <li class="mb-4"><a href="{{ url_for('admin') }}" class="text-blue-500 hover:underline">Go to Admin Portal</a></li>
         </ul>
     </div>
     <img src="../static/images/logo.png" alt="Moon Macrosystems Logo" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 150px; height: auto;">
