--- a/templates/login_signup_index.html
+++ b/templates/login_signup_index.html
@@ -55,7 +55,7 @@
             <button type="submit">Continue</button>
         </form>
     </div>
-    <img src="../static/images/logo.png" alt="Moon Macrosystems Logo" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 150px; height: auto;">
+    <img src="../static/images/logo.png" alt="Moon Macrosystems Logo" style="position: relative; bottom: 20px; left: 50%; transform: translateX(-50%); width: 150px; height: auto;">
 
 </body>
 </html>
