--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -88,6 +88,9 @@
                 </tr>
             </table>
         </form>
+        <form action="{{ url_for('logout') }}" method="post">
+            <button type="submit">Logout</button>
+        </form>
     </div>
 
     <script>
