--- a/templates/diff.html
+++ b/templates/diff.html
@@ -15,7 +15,7 @@
         -->
         <meta charset="utf-8">
         <title>
-            tmp\after.txt
+            tmp\kumaramit@iitgn.ac.inafter.txt
         </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
     <body>
         <div class="" id="topbar">
           <div id="filetitle"> 
-            tmp\after.txt
+            tmp\kumaramit@iitgn.ac.inafter.txt
           </div>
           <div class="switches">
             <div class="switch">
@@ -60,20 +60,24 @@
                 <div class="printmargin">
                     01234567890123456789012345678901234567890123456789012345678901234567890123456789
                 </div>
-                <div class="highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span class="lineno_q">1</span><span class="lineno_q">2</span><span class="lineno_q">3</span><span class="lineno_q">4</span><span class="lineno_q">5</span><span class="lineno_q">6</span><span class="lineno_q">7</span><span class="lineno_q">8</span><span class="lineno_q">9</span><span class="lineno_q">10</span><span class="lineno_q lineno_leftchange">11</span><span class="lineno_q">12</span><span class="lineno_q">13</span><span class="lineno_q">14</span><span class="lineno_q">15</span></pre></div></td><td class="code"><pre>+-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
+                <div class="highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span class="lineno_q">1</span><span class="lineno_q">2</span><span class="lineno_q">3</span><span class="lineno_q">4</span><span class="lineno_q">5</span><span class="lineno_q">6</span><span class="lineno_q">7</span><span class="lineno_q">8</span><span class="lineno_q">9</span><span class="lineno_q">10</span><span class="lineno_q">11</span><span class="lineno_q">12</span><span class="lineno_q">13</span><span class="lineno_q">14</span><span class="lineno_q lineno_leftchange">15</span><span class="lineno_q">16</span><span class="lineno_q">17</span><span class="lineno_q">18</span><span class="lineno_q">19</span></pre></div></td><td class="code"><pre>+-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 |            email            |             password             | admin_priveleges |                                             data_                                              |
 +-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 |   briana_kirk@iitgn.ac.in   | 3bbd1873056226d83e6371a24d340340 |        no        |   {&quot;last_name&quot;: &quot;Kirk&quot;, &quot;first_name&quot;: &quot;Briana&quot;, &quot;driver_license_number&quot;: &quot;7890123456789012&quot;}   |
 |  bryson_greene@iitgn.ac.in  | 889211b122daa7f9f917d3d3b3475514 |        no        |  {&quot;last_name&quot;: &quot;Greene&quot;, &quot;first_name&quot;: &quot;Bryson&quot;, &quot;driver_license_number&quot;: &quot;6789012345678901&quot;}  |
 |  daniel_wilson@iitgn.ac.in  | e7f84ff145ced31368756c41af7fef9c |        no        |  {&quot;last_name&quot;: &quot;Wilson&quot;, &quot;first_name&quot;: &quot;Daniel&quot;, &quot;driver_license_number&quot;: &quot;8901234567890123&quot;}  |
+|       dummy@dummy.com       | 275876e34cf609db118f3d84b799a790 |        no        |                                              None                                              |
 |   emily_brown@iitgn.ac.in   | f6244d2fc24ec05bedfbf7a84a42ddd4 |        no        |   {&quot;last_name&quot;: &quot;Brown&quot;, &quot;first_name&quot;: &quot;Emily&quot;, &quot;driver_license_number&quot;: &quot;5678901234567890&quot;}   |
 |     john_doe@iitgn.ac.in    | 6d40e095b7f43848dc76ec017592da29 |        no        |    {&quot;last_name&quot;: &quot;Doe&quot;, &quot;first_name&quot;: &quot;John&quot;, &quot;driver_license_number&quot;: &quot;2345678901234567&quot;}     |
 |    koramassey@iitgn.ac.in   | fdec10f5e0fc93e0dadc8c53b9802623 |        no        |   {&quot;last_name&quot;: &quot;Massey&quot;, &quot;first_name&quot;: &quot;Kora&quot;, &quot;driver_license_number&quot;: &quot;4567890123456789&quot;}   |
 |    kumaramit@iitgn.ac.in    | f039eb446cc0bd7c5ad12b7a0e2a1dae |       yes        |   {&quot;last_name&quot;: &quot;Kumar&quot;, &quot;first_name&quot;: &quot;Amit&quot;, &quot;driver_license_number&quot;: &quot;1234567890123456&quot;}    |
-<span class="left_diff_change">|  kumbharvedant@iitgn.ac.in  | c1320a4c86655826f33a2caa80070c65 |       yes        |                                              None                                              |
-</span>|  max_verstappen@iitgn.ac.in | f5f75389bdbeddbbd70ac31c0245e42e |        no        | {&quot;last_name&quot;: &quot;Verstappen&quot;, &quot;first_name&quot;: &quot;Max&quot;, &quot;driver_license_number&quot;: &quot;3456789012345678&quot;}  |
+|  max_verstappen@iitgn.ac.in | f5f75389bdbeddbbd70ac31c0245e42e |        no        | {&quot;last_name&quot;: &quot;Verstappen&quot;, &quot;first_name&quot;: &quot;Max&quot;, &quot;driver_license_number&quot;: &quot;3456789012345678&quot;}  |
 | olivia_anderson@iitgn.ac.in | 6fe76ed19c9386c1389512a53aaaa6c6 |        no        | {&quot;last_name&quot;: &quot;Anderson&quot;, &quot;first_name&quot;: &quot;Olivia&quot;, &quot;driver_license_number&quot;: &quot;9012345678901234&quot;} |
 |  sophia_taylor@iitgn.ac.in  | 4d4cc5ce3071ce7dbb117a1e5503a3be |        no        |  {&quot;last_name&quot;: &quot;Taylor&quot;, &quot;first_name&quot;: &quot;Sophia&quot;, &quot;driver_license_number&quot;: &quot;0123456789012345&quot;}  |
+<span class="left_diff_change">|    test.user.1@gmail.com    | 098f6bcd4621d373cade4e832627b4f6 |        no        |                                              None                                              |
+</span>|              u1             | e4774cdda0793f86414e8b9140bb6db4 |        no        |                                              None                                              |
+|              u2             | 270c1b084f3f146eb5787075158d9c53 |        no        |                                              None                                              |
+|       user1@yahoo.com       | 24c9e15e52afc47c225b757e7bee1f9d |        no        |                                              None                                              |
 +-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 
 </pre></td></tr></table></div>
@@ -86,20 +90,24 @@
                 <div class="printmargin">
                     01234567890123456789012345678901234567890123456789012345678901234567890123456789
                 </div>
-                <div class="highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span class="lineno_q">1</span><span class="lineno_q">2</span><span class="lineno_q">3</span><span class="lineno_q">4</span><span class="lineno_q">5</span><span class="lineno_q">6</span><span class="lineno_q">7</span><span class="lineno_q">8</span><span class="lineno_q">9</span><span class="lineno_q">10</span><span class="lineno_q lineno_rightchange">11</span><span class="lineno_q">12</span><span class="lineno_q">13</span><span class="lineno_q">14</span><span class="lineno_q">15</span></pre></div></td><td class="code"><pre>+-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
+                <div class="highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span class="lineno_q">1</span><span class="lineno_q">2</span><span class="lineno_q">3</span><span class="lineno_q">4</span><span class="lineno_q">5</span><span class="lineno_q">6</span><span class="lineno_q">7</span><span class="lineno_q">8</span><span class="lineno_q">9</span><span class="lineno_q">10</span><span class="lineno_q">11</span><span class="lineno_q">12</span><span class="lineno_q">13</span><span class="lineno_q">14</span><span class="lineno_q lineno_rightchange">15</span><span class="lineno_q">16</span><span class="lineno_q">17</span><span class="lineno_q">18</span><span class="lineno_q">19</span></pre></div></td><td class="code"><pre>+-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 |            email            |             password             | admin_priveleges |                                             data_                                              |
 +-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 |   briana_kirk@iitgn.ac.in   | 3bbd1873056226d83e6371a24d340340 |        no        |   {&quot;last_name&quot;: &quot;Kirk&quot;, &quot;first_name&quot;: &quot;Briana&quot;, &quot;driver_license_number&quot;: &quot;7890123456789012&quot;}   |
 |  bryson_greene@iitgn.ac.in  | 889211b122daa7f9f917d3d3b3475514 |        no        |  {&quot;last_name&quot;: &quot;Greene&quot;, &quot;first_name&quot;: &quot;Bryson&quot;, &quot;driver_license_number&quot;: &quot;6789012345678901&quot;}  |
 |  daniel_wilson@iitgn.ac.in  | e7f84ff145ced31368756c41af7fef9c |        no        |  {&quot;last_name&quot;: &quot;Wilson&quot;, &quot;first_name&quot;: &quot;Daniel&quot;, &quot;driver_license_number&quot;: &quot;8901234567890123&quot;}  |
+|       dummy@dummy.com       | 275876e34cf609db118f3d84b799a790 |        no        |                                              None                                              |
 |   emily_brown@iitgn.ac.in   | f6244d2fc24ec05bedfbf7a84a42ddd4 |        no        |   {&quot;last_name&quot;: &quot;Brown&quot;, &quot;first_name&quot;: &quot;Emily&quot;, &quot;driver_license_number&quot;: &quot;5678901234567890&quot;}   |
 |     john_doe@iitgn.ac.in    | 6d40e095b7f43848dc76ec017592da29 |        no        |    {&quot;last_name&quot;: &quot;Doe&quot;, &quot;first_name&quot;: &quot;John&quot;, &quot;driver_license_number&quot;: &quot;2345678901234567&quot;}     |
 |    koramassey@iitgn.ac.in   | fdec10f5e0fc93e0dadc8c53b9802623 |        no        |   {&quot;last_name&quot;: &quot;Massey&quot;, &quot;first_name&quot;: &quot;Kora&quot;, &quot;driver_license_number&quot;: &quot;4567890123456789&quot;}   |
 |    kumaramit@iitgn.ac.in    | f039eb446cc0bd7c5ad12b7a0e2a1dae |       yes        |   {&quot;last_name&quot;: &quot;Kumar&quot;, &quot;first_name&quot;: &quot;Amit&quot;, &quot;driver_license_number&quot;: &quot;1234567890123456&quot;}    |
-<span class="right_diff_change">|  kumbharvedant@iitgn.ac.in  | c1320a4c86655826f33a2caa80070c65 |        no        |                                              None                                              |
-</span>|  max_verstappen@iitgn.ac.in | f5f75389bdbeddbbd70ac31c0245e42e |        no        | {&quot;last_name&quot;: &quot;Verstappen&quot;, &quot;first_name&quot;: &quot;Max&quot;, &quot;driver_license_number&quot;: &quot;3456789012345678&quot;}  |
+|  max_verstappen@iitgn.ac.in | f5f75389bdbeddbbd70ac31c0245e42e |        no        | {&quot;last_name&quot;: &quot;Verstappen&quot;, &quot;first_name&quot;: &quot;Max&quot;, &quot;driver_license_number&quot;: &quot;3456789012345678&quot;}  |
 | olivia_anderson@iitgn.ac.in | 6fe76ed19c9386c1389512a53aaaa6c6 |        no        | {&quot;last_name&quot;: &quot;Anderson&quot;, &quot;first_name&quot;: &quot;Olivia&quot;, &quot;driver_license_number&quot;: &quot;9012345678901234&quot;} |
 |  sophia_taylor@iitgn.ac.in  | 4d4cc5ce3071ce7dbb117a1e5503a3be |        no        |  {&quot;last_name&quot;: &quot;Taylor&quot;, &quot;first_name&quot;: &quot;Sophia&quot;, &quot;driver_license_number&quot;: &quot;0123456789012345&quot;}  |
+<span class="right_diff_change">|    test.user.1@gmail.com    | 098f6bcd4621d373cade4e832627b4f6 |       yes        |                                              None                                              |
+</span>|              u1             | e4774cdda0793f86414e8b9140bb6db4 |        no        |                                              None                                              |
+|              u2             | 270c1b084f3f146eb5787075158d9c53 |        no        |                                              None                                              |
+|       user1@yahoo.com       | 24c9e15e52afc47c225b757e7bee1f9d |        no        |                                              None                                              |
 +-----------------------------+----------------------------------+------------------+------------------------------------------------------------------------------------------------+
 
 </pre></td></tr></table></div>
